src/styles/Header.css
.header-container {
  /* position: absolute; */
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 20px;
  height: 10vh;
}

.header-logo {
  height: 70px;
  margin-left: 20px;
  border-radius: 5px;
}

.header-logo img {
  height: 70px;
  margin-left: 20px;
  border-radius: 5px;
}

.navbar {
  display: none;
}

.burger-menu,
.close-menu-btn {
  font-size: 30px;
  margin: 20px;
  cursor: pointer;
  background: none;
  border: none;
  color: white;
}

.menu {
  position: absolute;
  top: 0;
  right: 0;
  width: 50%;
  height: 100%;
  background: linear-gradient(180deg, rgb(51, 123, 200), rgb(23, 40, 106));
  transition: transform 0.3s ease-in-out; /* Übergangseffekt */
  transform: translateX(100%); /* Menü außerhalb des Sichtbereichs */
  z-index: 99;
}

.header-container.menu-open .menu {
  transform: translateX(0); /* Menü einblenden */
}

.menu-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
}

.languages-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.languages-container button {
  margin: 4px;
  background-color: transparent;
  color: white;
  border: none;
  cursor: pointer;
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 20px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

li {
  margin: 10px 0;
}

a {
  color: white;
  text-decoration: none;
}

.admin-login-container {
  margin-top: 20px;
}

/* Responsive Styles */

@media (min-width: 1100px) {
  .header-container {
    position: fixed;
    width: 100vw;
    display: flex;
    justify-content: space-between;
    z-index: 100;
    top: 20px;
    left: 0;
    padding-bottom: 60px;
  }
  .navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    /* margin-right: 20px; */
  }
  .navbar ul {
    display: flex;
    flex-direction: row;

    margin-left: 50px;
    margin-right: 100px;
  }
  .navbar li {
    margin: 0 10px;
  }

  .navbar div {
    display: flex;
    flex-direction: column;
    margin-right: 30px;
  }
  .burger-menu {
    display: none;
  }
  .menu {
    display: none;
  }
}

